stable version, has window resize problem

--- a/index.html
+++ b/index.html
@@ -18,16 +18,24 @@
 						<p id="welcome-name">Welcome Neetigya Saxena</p>
 						<p id="subcontractor-name">Stat Staff Professionals</p>	
 					</div>
-					<nav id="secondary-nav">
-						<a href="#" class= 'change'>Dashboard</a>
-						<a href="#">Accounts</a>
-						<a href="#">Preferences</a>
-						<a href="#">Subcontractors</a>
-						<a href="#">Caregivers</a>
-						<a href="#">Facilities</a>
-						<a href="#">Financial</a>
-						<a href="#">Reports</a>
-					</nav>
+					<div class="navigation">
+						<nav id="secondary-nav">
+							<a href="#" class='change'>Dashboard</a>
+							<a href="#">Accounts</a>
+							<a href="#">Preferences</a>
+							<a href="#">Subcontractors</a>
+							<a href="#">Caregivers</a>
+							<a href="#">Facilities</a>
+							<a href="#">Financial</a>
+							<a href="#">Reports</a>
+						</nav>
+						<div class="ham-menu hidden" >
+							<div></div>
+							<div></div>
+							<div></div>
+						</div>
+						<div class="hidden-menu hidden"></div>
+					</div>
 			</div>
 			<!--<div id="header-account-info">
 				<ul>
