--- a/index.1.html
+++ b/index.1.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Davin Dashboard</title></title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="public/stylesheets/main.css">
-</head>
-<body>
-	<div class = "arrow-up"></div>
-	
 
-	<script type="text/javascript" src = "public/scripts/app.js"></script>
+<head>
+	<title>Davin Dashboard</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" type="text/css" />
+	<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="public/stylesheets/main.1.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+</head>
+
+<body>
+	<div class="arrow-up"></div>
+<div class="navigation">
+	<div class='ham-menu'>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+	<nav class="hidden-menu ">
+		<a href="#">Dashboard</a>
+		<a href="#">Accounts</a>
+		<a href="#">Preferences</a>
+		<a href="#">Subcontractors</a>
+		<a href="#">Caregivers</a>
+	</nav>
+</div>	
+	<script type="text/javascript" src="public/scripts/app.1.js"></script>
 </body>
+
 </html>
