stable version with few issues, scroll animation and media queries remaining

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<p id="subcontractor-name">Stat Staff Professionals</p>	
 					</div>
 					<div class="navigation">
-						<nav id="secondary-nav">
+						<nav class="secondary-nav">
 							<a href="#" class='change'>Dashboard</a>
 							<a href="#">Accounts</a>
 							<a href="#">Preferences</a>
@@ -29,12 +29,12 @@
 							<a href="#">Financial</a>
 							<a href="#">Reports</a>
 						</nav>
-						<div class="ham-menu hidden" >
+						<div class="ham-menu-s hidden">
 							<div></div>
 							<div></div>
 							<div></div>
 						</div>
-						<div class="hidden-menu hidden"></div>
+						<div class="hidden-menu-s hidden"></div>
 					</div>
 			</div>
 			<!--<div id="header-account-info">
@@ -45,24 +45,36 @@
 					<li><a href="#">Logout</a></li>
 				</ul>
 			</div>-->
+			
 			<div id="header-account-info">
-				<a href="#">Admin</a>
-				<a href="#">My Account</a>
-				<a href="#">Support</a>
-				<a href="#">Logout</a>
+				<div class="arrow-down"></div>
+				<div id="account-links">
+					<a href="#">Admin</a>
+					<a href="#">My Account</a>
+					<a href="#">Support</a>
+					<a href="#">Logout</a>	
+				</div>
 			</div>
 		</header>
 	</div>
-	<nav class="MainNav">
-		<a href = "#" class='change2'>Dashboard</a>
-		<a href = "#" class="">Accounts</a>
-		<a href = "#" class="">Preferences</a>
-		<a href = "#" class="">Subcontractors</a>
-		<a href = "#" class="">Caregivers</a>
-		<a href = "#" class="">Facilities</a>
-		<a href = "#" class="">Financial</a>
-		<a href = "#" class="">Reports</a>
-	</nav>
+	<div class="navigation-main">
+		<div class="ham-menu-m hidden">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+		<div class="hidden-menu-m hidden"></div>
+		<nav class="MainNav">
+			<a href = "#" class='change2'>Dashboard</a>
+			<a href = "#" class="">Accounts</a>
+			<a href = "#" class="">Preferences</a>
+			<a href = "#" class="">Subcontractors</a>
+			<a href = "#" class="">Caregivers</a>
+			<a href = "#" class="">Facilities</a>
+			<a href = "#" class="">Financial</a>
+			<a href = "#" class="">Reports</a>
+		</nav>		
+	</div>
 	<main>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi cursus tempus leo, eget auctor felis viverra quis. Suspendisse in nulla ultrices, efficitur arcu id, bibendum nibh. In massa ex, blandit accumsan urna in, suscipit lobortis turpis. Nulla
 			viverra enim quis porttitor mollis. Sed maximus auctor arcu in pulvinar. Cras eleifend lectus at turpis interdum, aliquet maximus nisi venenatis. Suspendisse posuere tortor vitae tincidunt pretium. Aenean quis leo at nisl consectetur ultricies eu id
